# RL-IL-for-Surgical-Robot-Learning

./: .gitignore  CLAUDE.md  Demonstration.md  README.md  pyproject.toml  requirements.txt
.clinerules/: debugging-patterns.md  docker-workflow.md  reward-system-guidelines.md  training-directory-structure.md
doc/: bc_evaluation_results.md  gripper_blocking_reward_system.md  ppo_peg_transfer.md  results.md
docker/: Dockerfile  docker-compose.yml
experiments/: PPO_RESULTS_EXPLANATION.md  README.md  ablation_study.py  evaluate_agent.py  evaluate_bc.py  evaluate_ppo.py  evaluate_ppo_bc.py  evaluate_ppo_il.py  evaluate_rl_old.py  evaluate_unified.py  experiment_hyperopt_unified.py  generate_expert_data_needle_reach.py  generate_expert_data_peg_transfer.py  generate_ppo_analysis.py  hyperopt_unified.py  run_experiments.py  train_bc.py  train_ppo+bc.py  train_ppo+il.py  train_ppo.py  train_unified.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  surrol_env_params.md  systemPatterns.md  techContext.md
scripts/: analyze_expert_data.py  analyze_training_logs.py  debug_activation.py  debug_bc_behavior.py  debug_collision_config.py  debug_constraint.py  debug_contacts.py  debug_full_sequence.py  debug_full_workflow.py  debug_gripper_movement.py  debug_near_miss.py  debug_peg_transfer.py  debug_pose_details.py  debug_precision.py  debug_surrol_pose.py  debug_tip_vs_eef.py  debug_workspace.py  diagnose_bc_training.py  diagnose_imitation_bug.py  diagnose_policy.py  evaluate.py  evaluate_bc.py  evaluate_with_noise.py  evaluate_with_pause.py  generate_expert_data.py  generate_expert_data_peg_transfer.py  test_direct_control.py  test_early_exit.py  (+9 more)
(+748 files in other folders)
