[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dvrk_gym"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A Gymnasium environment for the da Vinci Research Kit (dVRK)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dvrk_gym" = ["assets/**/*"]
