[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dvrk_gym"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A Gymnasium environment for the da Vinci Research Kit (dVRK)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stable-baselines3~=2.2.1",
    "imitation~=1.0.0",
    "roboticstoolbox-python",
    "numpy<2.0",
    "gymnasium",
    "pybullet",
    "torch~=1.13.1",
    # Pinned to version 3.20.3 to resolve incompatibility with tensorboard
    # See: TypeError: MessageToJson() got an unexpected keyword argument 'including_default_value_fields'
    "protobuf==3.20.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dvrk_gym" = ["assets/**/*"]
